@@ -89,10 +89,13 @@ class File_Common {
         }
 
         // UPLOAD defines come from PEAR lib/pear/Compat/Constant/UPLOAD_ERR.php
+        test($_FILES);
+
         if (isset($_FILES[$var_name]['error']) && 
             ( $_FILES[$var_name]['error'] == UPLOAD_ERR_INI_SIZE ||
               $_FILES[$var_name]['error'] == UPLOAD_ERR_FORM_SIZE)
             ) {
+
             $this->_errors[] =  PHPWS_Error::get(PHPWS_FILE_SIZE, 'core', 'File_Common::getFiles');
             return false;
         }
