@@ -1,4 +1,8 @@
 <?php
+  /**
+   * @version $Id$
+   * @author Matthew McNaney <mcnaney at gmail dot com>
+   */
 
 $settings = array('base_doc_directory'=> PHPWS_HOME_DIR . 'files',
                   'base_img_directory'=> PHPWS_HOME_DIR . 'images');
